# emotion_active_perception

./: .gitignore  README.md
src/emotion_active_perception/: CMakeLists.txt  Dockerfile  environment.yml  package.xml  setup.py
src/emotion_active_perception/notebooks/: run_active_cycle.ipynb
src/emotion_active_perception/resource/: emotion_active_perception
src/emotion_active_perception/scripts/: ap_action_server  auto_labeler_node  data_manager_node  emotion_controller  example_drl_agent  uncertainty_node
src/emotion_active_perception/src/emotion_active_perception/: __init__.py
src/emotion_active_perception/src/emotion_active_perception/actions/: MoveAndCapture.action
src/emotion_active_perception/src/emotion_active_perception/config/: default.yaml  emotive_params.yaml
src/emotion_active_perception/src/emotion_active_perception/examples/: __init__.py  example_drl_agent.py
src/emotion_active_perception/src/emotion_active_perception/nodes/: __init__.py  ap_action_server.py  auto_labeler_node.py  data_manager_node.py  emotion_controller_node.py  uncertainty_node.py
src/emotion_active_perception/src/emotion_active_perception/trainer/: active_loop.py
src/emotion_active_perception/src/emotion_active_perception/uncertainty/: mc_dropout.py
src/emotion_active_perception/src/emotion_active_perception/utils/: __init__.py  json_logger.py  metrics.py  onnx_utils.py  trt_wrapper.py
src/emotion_active_perception/tests/: test_action_definition.py  test_metrics.py  test_trainer.py
